# factor-pricing-model-universe

./: .all-contributorsrc  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  labels.yml  release.yml
docs/source/: command.md  conf.py  configuration.md  index.md  installation.md  pipelines.md  usage.md
examples/: us_equities.parquet  us_equities.yaml
examples/us_equities/: estimation-universe.yaml  model-universe.parquet  model-universe.yaml  xs_data.yaml
src/factor_pricing_model_universe/: cli.py  config.py  data.py  pipeline.py  utils.py
src/fpm_universe/: cli.py  config.py  data.py  pipeline.py
tests/: test_main.py
tests/config/: test_config_basic.py  test_config_data.py  test_datastore.py  test_pipeline_executor.py
tests/data/: test_concat.py  test_jq_compile.py  test_load_all_data.py
tests/pipeline/: test_range_validity.py  test_ranking.py  test_rolling_correlation_rank_validity.py  test_rolling_validity.py
